--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -36,16 +36,16 @@
   }
 
   .list_actions {
-    font-size:    x-small;
+  //  font-size:    x-small;
     text-align:   right;
     padding-left: 1em;
   }
 
   .list_line_even {
-    background:   #eee;
+    background:   #e8e8e8;
   }
 
   .list_line_odd {
-    background:   #e4e4e4;
+    background:   #f4f4f4;
   }
 } 
