--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -7,14 +7,14 @@
     border-collapse: collapse;
     }
   table tr td {
-    padding: 5px;
+    padding: 10px;
     vertical-align: top;
     }
   .list_image {
     width:  50%;
-    //height: 70px;
+    height: 120px;
     }
-  .list_description {
+  .list_discription {
     width: 70%;
     dl {
       margin: 0;
