Add Store: controller, index, scss

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -11,8 +11,8 @@
     vertical-align: top;
     }
   .list_image {
-    width:  50%;
-    height: 120px;
+    width:  75px;
+    height: 107px;
     }
   .list_discription {
     width: 70%;
