--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -4,9 +4,10 @@
 
 .store {
   h1 {
-    margin: 0.5em 0 1em;
-    font-size:  200%;
-    color: #446;
+    margin: 0;
+    padding-bottom: 0.5em;
+    font:  150% sans-serif;
+    color: #226;
     border-bottom: 3px dotted #77d;
   }
 
@@ -26,7 +27,7 @@
 
     h3 {
       font-size: 120%;
-      /* font-family: sans-serif; */
+      font-family: sans-serif;
       margin-left: 100px;
       margin-top: 0;
       margin-bottom: 2px;
