--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
       <div class="row">
 
         <div id="side" class="col-md-2">
+          <time><%= Time.zone.now.to_s(:ru_datetime) %></time> 
           <ul>
             <li><a href="http://www....">Home</a></li>
             <li><a href="http://www..../faq">Questions</a></li>
