--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -10,6 +10,7 @@
 			<%= sanitize(product.discription) %>
 			<div class="price_line">
 				<span class="price"><%= number_to_currency(product.price) %></span>
+				<%= button_to 'Add to Cart', line_items_path(product_id: product), class: 'btn btn-outline-primary' %>
 			</div>
 		</div>
 	<% end %>
