Your Cart to Side Bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,11 @@
 
         <div id="side" class="col-md-2">
           <time><%= Time.zone.now.to_s(:ru_datetime) %></time> 
+          
+          <div id="cart">
+            <%= render @cart %>
+          </div>
+
           <ul>
             <li><a href="http://www....">Home</a></li>
             <li><a href="http://www..../faq">Questions</a></li>
