--- a/app/assets/stylesheets/carts.css.scss
+++ b/app/assets/stylesheets/carts.css.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the Carts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.carts {
+.carts, #side #cart {
 	.item_price, .total_line {
 		text-align: right;
  	}
@@ -10,3 +10,5 @@
  		border-top: 1px solid #595;
 	}
 }
+
+
