--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,10 @@
 
         <div id="side" class="col-md-3">
           <time><%= Time.zone.now.to_s(:ru_datetime) %></time> 
-          
-          <div id="cart">
+ 
+          <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
             <%= render @cart %>
-          </div>
+          <% end %>
 
           <ul>
             <li><a href="http://www....">Home</a></li>
