--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,11 +23,13 @@
         <div id="side" class="col-md-3">
           <time><%= Time.zone.now.to_s(:ru_datetime) %></time> 
           
-          <% if @cart %>
-            <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
-              <%= render @cart %>
+          <div id="cart">
+            <% if @cart %>
+              <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+                <%= render @cart %>
+              <% end %>
             <% end %>
-          <% end %>
+          </div>
 
           <ul>
             <li><a href="http://www....">Home</a></li>
