--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -7,7 +7,7 @@
 <% cache ['store', Product.latest] do %>
 	<% @products.each do |product| %>
 		<% cache ['entry', product] do %>
-			<div class="store entry">
+			<div class="entry">
 				<%= image_tag(product.image_url) %>
 				<h3><%= product.title %></h3>
 				<%= sanitize(product.discription) %>
