--- a/app/views/line_items/index.html.erb
+++ b/app/views/line_items/index.html.erb
@@ -5,8 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th>Product</th>
-      <th>Cart</th>
+      <th>Product </th>
+      <th>&#10004; Cart &nbsp;&nbsp;&nbsp;</th>
+      <th>quantity </th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +15,9 @@
   <tbody>
     <% @line_items.each do |line_item| %>
       <tr>
-        <td><%= line_item.product %></td>
-        <td><%= line_item.cart %></td>
+        <td><%= truncate(line_item.product.title, length: 32) %></td>
+        <td><%= line_item.cart_id.to_s %></td>
+        <td><%= line_item.quantity %></td>
         <td><%= link_to 'Show', line_item %></td>
         <td><%= link_to 'Edit', edit_line_item_path(line_item) %></td>
         <td><%= link_to 'Destroy', line_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
