--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Добро пожаловать</h1>
-Сейчас <%= Time.now %><br>
+<time style="color: #141;"><%= Time.zone.now.to_s(:ru_datetime_2) %></time>
 У нас имеется <%= pluralize(@total_orders, "order") %>
