--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,15 +37,14 @@ time {
   }
 }
 
-/* #notice {
-  color: #000 !important;
-  border: 2px solid red;
-  padding: 1em;
+#notice {
+  color: #474 !important;
+  border: 2px solid #bbb;
+  padding: 0.5em;
   margin-bottom: 2em;
   background-color: #f0f0f0;
-  font: bold smaller sans-serif;
 }
- */
+
 #columns {
   background: #141;
 
