--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <t># Корзины</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +13,7 @@
   <tbody>
     <% @carts.each do |cart| %>
       <tr>
+        <td><%= cart.id %></td>
         <td><%= link_to 'Show', cart %></td>
         <td><%= link_to 'Edit', edit_cart_path(cart) %></td>
         <td><%= link_to 'Destroy', cart, method: :delete, data: { confirm: 'Are you sure?' } %></td>
