--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,6 @@
 
     <div id="columns" class="container main ">
       <div class="row">
-
         <div id="side" class="col-md-3">
           <time><%= Time.zone.now.to_s(:ru_datetime) %></time> 
           
@@ -39,12 +38,14 @@
           </ul>
 
           <% if session[:user_id] %>
-            ul>
+            <ul>
               <li><%= link_to 'Orders', orders_path %></li>
               <li><%= link_to 'Products', products_path %></li>
               <li><%= link_to 'Users', users_path %></li>
             </ul>
-            <%= button_to 'Logout', logout_path, method: :delete %>
+            <%= button_to 'Logout', logout_path, method: :delete, class: 'btn btn-outline-success btn-sm' %>
+          <% else %>
+            <%= button_to 'Login', login_path, class: 'btn btn-outline-success btn-sm' %>
           <% end %>
           
         </div>
