--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,7 @@
             </ul>
             <%= button_to 'Logout', logout_path, method: :delete, class: 'btn btn-outline-success btn-sm' %>
           <% else %>
+            <% flash[alert: ''] %>
             <%= button_to 'Login', login_path, class: 'btn btn-outline-success btn-sm' %>
           <% end %>
           
