--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,11 +1,15 @@
-<p id="notice"><%= notice %></p>
+<% if notice %>
+  <p id="notice"><%= notice %></p>
+<% end %>
 
-<h1>Carts</h1>
+<h1><%= t('.title') %></h1>
 
 <table>
   <thead>
     <tr>
-      <t># Корзины</th>
+      <th width="25%">№<br>корзины</th>
+      <th width="20%">Кол-во<br>товара</th>
+      <th width="25%">Цена</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,9 +18,11 @@
     <% @carts.each do |cart| %>
       <tr>
         <td><%= cart.id %></td>
+        <td><%= cart.total_count %></td>
+        <td><%= number_to_currency(cart.total_price) %></td>
         <td><%= link_to 'Show', cart %></td>
         <td><%= link_to 'Edit', edit_cart_path(cart) %></td>
-        <td><%= link_to 'Destroy', cart, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', cart, method: :delete, data: { confirm: 'Вы уверены?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Cart', new_cart_path %>
+<%= link_to 'New Cart', new_cart_path, class: 'btn btn-outline-success' %>
