--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,11 +41,11 @@
             <ul>
               <li><%= link_to 'Orders', orders_path %></li>
               <li><%= link_to 'Products', products_path %></li>
+              <li><%= link_to 'Carts', carts_path %></li>
               <li><%= link_to 'Users', users_path %></li>
             </ul>
             <%= button_to 'Logout', logout_path, method: :delete, class: 'btn btn-outline-success btn-sm' %>
           <% else %>
-            <% flash[alert: ''] %>
             <%= button_to 'Login', login_path, class: 'btn btn-outline-success btn-sm' %>
           <% end %>
           
