--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,15 +2,18 @@
   <p id="notice"><%= notice %></p>
 <% end %>
 
-<h1>Orders</h1>
+<h1><%= t('.title') %></h1>
 
-<table>
+<%= link_to t('.new_order'), new_order_path, class: 'btn btn-outline-success btn-sm' %>
+<br><br>
+
+<table class='order'>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Email</th>
-      <th>Pay type</th>
+      <th><%= t('.name') %></th>
+      <th><%= t('.address') %></th>
+      <th><%= t('.email') %></th>
+      <th><%= t('.pay_type') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -29,7 +32,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Order', new_order_path %>
