--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -22,5 +22,5 @@
   <%= @order.pay_type %>
 </p>
 
-<%= link_to 'Edit', edit_order_path(@order) %> |
-<%= link_to 'Back', orders_path %>
+<%= link_to 'Edit', edit_order_path(@order), class: 'btn btn-outline-success btn-sm' %> 
+<%= link_to 'Back', orders_path, class: 'btn btn-outline-success btn-sm' %>
