--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,9 @@
-<p id="notice"><%= notice %></p>
+<% if notice %>
+  <p id="notice"><%= notice %></p>
+<% end %>
 
-<h1>Products</h1>
+
+<h1><%= t('.title') %></h1>
 
 <table>
   <% @products.each do |product| %>
