--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,5 +22,5 @@
   <%= @product.price %>
 </p>
 
-<%= link_to 'Edit', edit_product_path(@product), class: 'btn btn-primary' %>
-<%= link_to 'Back', products_path, class: 'btn btn-outline-secondary' %>
+<%= link_to 'Edit', edit_product_path(@product), class: 'btn btn-outline-success' %>
+<%= link_to 'Back', products_path, class: 'btn btn-outline-success' %>
