--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,24 +14,25 @@
 
     <fieldset>
       <legend>Введите сведения о пользователе</legend>
-      <div class="field">
+      <div class="form-group">
         <%= form.label :name %>
-        <%= form.text_field :name, id: :user_name, size: 40  %>
+        <%= form.text_field :name, id: :user_name, size: 40 %>
       </div>
 
-      <div class="field">
+      <div class="form-group">
         <%= form.label :password %>
-        <%= form.password_field :password, id: :user_password, size: 40  %>
+        <%= form.password_field :password, id: :user_password, size: 40 %>
       </div>
 
-      <div class="field">
+      <div class="form-group">
         <%= form.label :password_confirmation %>
-        <%= form.password_field :password_confirmation, id: :user_password_confirmation, size: 40  %>
+        <%= form.password_field :password_confirmation, id: :user_password_confirmation, size: 40 %>
       </div>
 
-      <div class="actions">
-        <%= form.submit %>
-      </div>
+  <div class="form-group">
+    <%= form.submit t('.submit', action: @user.new_record? ? 'Создать' : 'Изменить'), class: 'btn btn-primary' %>
+    <%= link_to t('common.back'), :back, class: 'btn btn-outline-secondary' %>
+  </div>
     </fieldset>
   <% end %>
 </div>
