--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing User</h1>
+<h2><%= t('.title') %></h2>
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<!-- 
+<%= link_to 'Show', @user, class: 'btn btn-outline-success btn-sm' %>
+<%= link_to 'Back', users_path, class: 'btn btn-outline-success btn-sm' %>
+ -->
