--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,5 +7,5 @@
   <%= @user.name %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-outline-success btn-sm' %>
+<%= link_to 'Back', users_path, class: 'btn btn-outline-success btn-sm' %>
